ucet, zakaznici, admin - uzivatele

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,8 +3,10 @@
 <head>
 </head>
 <body>
-<div th:fragment="footer">
-    &copy; 2024 Realboss
-</div>
+<footer class="footer" th:fragment="footer">
+    <div class="container">
+        <span class="text-muted">@2024 Realboss JanCermak</span>
+    </div>
+</footer>
 </body>
 </html>
