--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,12 +6,11 @@
     <div th:replace="fragments/head"></div>
 </head>
 <body>
-<div th:replace="fragments/header :: header">
-</div>
+<div th:replace="fragments/header :: header"></div>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+    <div class="row mt-5">
+        <div class="col-md-6 offset-md-3">
             <h1>Přihlásit se</h1>
             <form th:action="@{/login}" method="post">
                 <!-- error message -->
