--- a/src/main/resources/templates/realman_users.html
+++ b/src/main/resources/templates/realman_users.html
@@ -8,35 +8,42 @@
 <body>
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container">
-    <div class="row">
-        <h1>List všech zákazníků</h1>
-    </div>
-    <div class="row">
-        <div class="col-lg-3">
-            <a data-toggle="modal" data-target="#addUserModal" class="btn btn-primary btn-sm mb-3">Přidat uživatele</a>
+<div class="container mt-5">
+    <div class="row mb-4">
+        <div class="col-12 text-left mb-2"> <!-- Adjust the column size based on your layout -->
+            <h1>List všech zákazníků</h1>
+        </div>
+        <div class="col-12">
+            <a data-toggle="modal" data-target="#addUserModal" class="btn btn-primary btn-sm mb-3 p-2 fw-bold">Přidat nového</a>
+            <a data-toggle="modal" data-target="#addUserExistingModal" class="btn btn-primary btn-sm mb-3 p-2 fw-bold">Přidat existujícího</a>
         </div>
     </div>
-    <table class="table table-striped table-bordered">
-        <thead class="table-dark">
-        <tr>
-            <th scope="col">Jméno</th>
-            <th scope="col">Příjmení</th>
-            <th scope="col">Email</th>
-            <th scope="col">Akce</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each = "user: ${connectedUsers}">
-            <td th:text="${user.firstName}"></td>
-            <td th:text="${user.lastName}"></td>
-            <td th:text="${user.email}"></td>
-            <td>
-                <a th:href="@{/admin/users/delete/{id}(id=${user.id})}" class="btn btn-danger">Smazat</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="card">
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Jméno</th>
+                        <th scope="col">Příjmení</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Akce</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each = "user: ${connectedUsers}">
+                        <td th:text="${user.firstName}"></td>
+                        <td th:text="${user.lastName}"></td>
+                        <td th:text="${user.email}"></td>
+                        <td>
+                            <a th:href="@{/realman/users/delete/{id}(id=${user.id})}" class="btn btn-danger">Smazat</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="modal fade" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="addUserModalLabel" aria-hidden="true">
@@ -73,6 +80,31 @@
                             Heslo
                         </label>
                         <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus">
+                    </div>
+
+                    <input type="submit" class="btn btn-primary mt-2" value="Přidat uživatele">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="addUserExistingModal" tabindex="-1" role="dialog" aria-labelledby="addUserExistingModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addUserExistingModalLabel">Add User</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form th:action="@{/realman/createRelation}" method="post" th:object="${newUser}">
+                    <div class="form-group">
+                        <label class="control-label" for="emailExist">
+                            Email existujícího uživatele
+                        </label>
+                        <input id="emailExist" class="form-control" name="emailExist" required autofocus="autofocus" th:field="*{email}">
                     </div>
 
                     <input type="submit" class="btn btn-primary mt-2" value="Přidat uživatele">
