--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,8 +10,8 @@
 </div>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+    <div class="row mt-5">
+        <div class="col-md-6 offset-md-3">
             <div th:if="${param.success}">
                 <div class="alert alert-info">
                     úspěšně jste se zaregistrovali do naší aplikace, Díky!
