--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -8,38 +8,44 @@
 <body>
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container">
-    <div class="row">
-        <h1>List všech uživatelů</h1>
-    </div>
-    <div class="row">
-        <div class="col-lg-3">
-            <a th:href="@{/registration}" class="btn btn-primary btn-sm mb-3">Zaregistrovat uživatele</a>
+<div class="container mt-4">
+    <div class="row mb-4">
+        <div class="col-12 text-left mb-2">
+            <h1>List všech uživatelů</h1>
+        </div>
+        <div class="col-2">
+            <a th:href="@{/registration}" class="btn btn-primary btn-sm mb-3 p-2 fw-bold">Zaregistrovat uživatele</a>
         </div>
     </div>
-    <table class="table table-striped table-bordered">
-        <thead class="table-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Jméno</th>
-                <th scope="col">Příjmení</th>
-                <th scope="col">Email</th>
-                <th scope="col">Akce</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each = "user: ${users}">
-                <td th:text="${user.id}"></td>
-                <td th:text="${user.firstName}"></td>
-                <td th:text="${user.lastName}"></td>
-                <td th:text="${user.email}"></td>
-                <td>
-                    <a th:href="@{/admin/users/edit/{id}(id=${user.id})}" class="btn btn-primary">Upravit</a>
-                    <a th:href="@{/admin/users/delete/{id}(id=${user.id})}" class="btn btn-danger">Smazat</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="card">
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Jméno</th>
+                            <th scope="col">Příjmení</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Akce</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each = "user: ${users}">
+                            <td th:text="${user.id}"></td>
+                            <td th:text="${user.firstName}"></td>
+                            <td th:text="${user.lastName}"></td>
+                            <td th:text="${user.email}"></td>
+                            <td>
+                                <a th:href="@{/admin/users/edit/{id}(id=${user.id})}" class="btn btn-primary">Upravit</a>
+                                <a th:href="@{/admin/users/delete/{id}(id=${user.id})}" class="btn btn-danger">Smazat</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div th:replace="fragments/footer :: footer"></div>
