--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,6 +16,9 @@
                     <a class="nav-link" aria-current="page" href="/">Domů</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_REALMAN') or hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" th:href="@{/realman/properties}">Nemovitosti</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasRole('ROLE_REALMAN') or hasRole('ROLE_ADMIN')">
                     <a class="nav-link" th:href="@{/realman/users}">Zákazníci</a>
                 </li>
                 <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
