--- a/src/main/resources/templates/realman_users.html
+++ b/src/main/resources/templates/realman_users.html
@@ -50,7 +50,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addUserModalLabel">Add User</h5>
+                <h5 class="modal-title" id="addUserModalLabel">Přidat zákazníka</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -73,13 +73,13 @@
                         <label class="control-label" for="email">
                             Email
                         </label>
-                        <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus">
+                        <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email">
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="password">
                             Heslo
                         </label>
-                        <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus">
+                        <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="5">
                     </div>
 
                     <input type="submit" class="btn btn-primary mt-2" value="Přidat uživatele">
