--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -36,13 +36,13 @@
                     <label class="control-label" for="email">
                         Email
                     </label>
-                    <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus">
+                    <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email">
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="password">
                         Heslo
                     </label>
-                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus">
+                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="5">
                 </div>
 
                 <div class="form-group">
