--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,7 +8,7 @@
 <body>
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container">
+<div class="container mt-5">
     <h1>Vítejte v administraci</h1>
     Welcome <span sec:authentication="principal.username">User</span>
 
