--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,7 +8,7 @@
 <body>
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container mt-3">
+<div class="container mt-5">
     <div class="main-body">
         <div class="row">
             <div class="col-lg-4">
@@ -105,7 +105,7 @@
                             </div>
 
                             <div class="form-group">
-                                <button type="submit" class="btn btn-success mt-2">Upravit</button>
+                                <button type="submit" class="btn btn-primary mt-2">Upravit</button>
                             </div>
                         </form>
                         <br>
@@ -115,7 +115,7 @@
                                 <input  type="file" name="file" accept="image/*">
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-success mt-2">Náhrát obrázek</button>
+                                <button type="submit" class="btn btn-primary mt-2">Náhrát obrázek</button>
                             </div>
                         </form>
                     </div>
