--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container">
+<div class="container mt-5">
     <h1>Vítejte v naší apce</h1>
     Welcome <span sec:authentication="principal.username">User</span>
 
