--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,13 +13,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/">Domů</a>
+                    <a class="nav-link" aria-current="page" href="/"><i class="fa-solid fa-house"></i> Domů</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_REALMAN') or hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/realman/properties}">Nemovitosti</a>
+                    <a class="nav-link" th:href="@{/realman/properties}"><i class="fa-solid fa-building"></i> Nemovitosti</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_REALMAN') or hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/realman/users}">Zákazníci</a>
+                    <a class="nav-link" th:href="@{/realman/users}"><i class="fa-solid fa-users"></i> Zákazníci</a>
                 </li>
                 <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link dropdown-toggle" th:href="@{/admin}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
