--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,8 @@
 <div th:replace="fragments/header :: header"></div>
 
 <div class="container">
-    <div class="row mt-5">
-        <div class="col-md-6 offset-md-3">
+    <div class="row mt-5 mx-1">
+        <div class="col-md-6 offset-md-3 card p-5">
             <h1>Přihlásit se</h1>
             <form th:action="@{/login}" method="post">
                 <!-- error message -->
@@ -24,19 +24,19 @@
 
                 <div class="form-group">
                     <label class="control-label" for="username">
-                        Username
+                        Email
                     </label>
-                    <input id="username" class="form-control" type="text" name="username" placeholder="Zadejte username" autofocus="autofocus">
+                    <input id="username" class="form-control" type="text" name="username" placeholder="Zadejte email" autofocus="autofocus">
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="password">
                         Heslo
                     </label>
-                    <input id="password" class="form-control" type="password" name="password" placeholder="Zadejte Password" autofocus="autofocus">
+                    <input id="password" class="form-control" type="password" name="password" placeholder="Zadejte heslo" autofocus="autofocus">
                 </div>
 
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success mt-2">Prihlasit se</button>
+                <div class="form-group mt-4">
+                    <button type="submit" class="btn btn-success">Prihlasit se</button>
                     <span>Nejste registrováni ? <a href="/" th:href="@{/registration}">Registrujte se zde</a> </span>
                 </div>
 
