--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registrace | RealBoss</title>
     <div th:replace="fragments/head"></div>
 </head>
 <body>
@@ -10,8 +10,8 @@
 </div>
 
 <div class="container">
-    <div class="row mt-5">
-        <div class="col-md-6 offset-md-3">
+    <div class="row mt-5 mx-1">
+        <div class="col-md-6 offset-md-3 card p-5">
             <div th:if="${param.success}">
                 <div class="alert alert-info">
                     úspěšně jste se zaregistrovali do naší aplikace, Díky!
@@ -24,30 +24,30 @@
                     <label class="control-label" for="firstName">
                         Jméno
                     </label>
-                    <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus">
+                    <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus" placeholder="Zadejte jméno">
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="lastName">
                         Příjmení
                     </label>
-                    <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus">
+                    <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus" placeholder="Zadejte příjmení">
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">
                         Email
                     </label>
-                    <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email">
+                    <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email" placeholder="Zadejte email">
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="password">
                         Heslo
                     </label>
-                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="5">
+                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="5" placeholder="Zadejte heslo">
                 </div>
 
-                <div class="form-group">
-                   <button type="submit" class="btn btn-success mt-2">Registrovat se</button>
-                    <span class="mt-2">Už jste registrováni ? <a href="/" th:href="@{/login}">Přihlašte se zde</a> </span>
+                <div class="form-group mt-4">
+                   <button type="submit" class="btn btn-success">Registrovat se</button>
+                    <span>Už jste registrováni ? <a href="/" th:href="@{/login}">Přihlašte se zde</a> </span>
                 </div>
             </form>
         </div>
