--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,8 +35,8 @@
                     <input id="password" class="form-control" type="password" name="password" placeholder="Zadejte heslo" autofocus="autofocus">
                 </div>
 
-                <div class="form-group mt-4">
-                    <button type="submit" class="btn btn-success">Prihlasit se</button>
+                <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
+                    <button type="submit" class="btn btn-success">Prihlasit se</button><br>
                     <span>Nejste registrováni ? <a href="/" th:href="@{/registration}">Registrujte se zde</a> </span>
                 </div>
 
