--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -45,9 +45,9 @@
                     <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="5" placeholder="Zadejte heslo">
                 </div>
 
-                <div class="form-group mt-4">
+                <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
                    <button type="submit" class="btn btn-success">Registrovat se</button>
-                    <span>Už jste registrováni ? <a href="/" th:href="@{/login}">Přihlašte se zde</a> </span>
+                    <span class="mt-3">Už jste registrováni ? <a href="/" th:href="@{/login}">Přihlašte se zde</a> </span>
                 </div>
             </form>
         </div>
