--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -14,7 +14,7 @@
         <div class="col-md-6 offset-md-3 card p-5">
             <div th:if="${param.success}">
                 <div class="alert alert-info">
-                    úspěšně jste se zaregistrovali do naší aplikace, Díky!
+                    úspěšně jste se zaregistrovali do naší aplikace, zkontrolujte si email a aktivujte účet!
                 </div>
             </div>
 
