realman add user - uprava

--- a/src/main/resources/templates/create_property.html
+++ b/src/main/resources/templates/create_property.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Přidat nemovitost</title>
+    <title>Přidat nemovitost | Realboss</title>
     <div th:replace="fragments/head"></div>
 </head>
 <body>
