--- a/src/main/resources/templates/forgot_passwd_fail.html
+++ b/src/main/resources/templates/forgot_passwd_fail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ověření | RealBoss</title>
+    <title>Zapomenuté heslo | RealBoss</title>
     <div th:replace="fragments/head"></div>
 </head>
 <body>
