--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Můj účet</title>
+    <title>Můj účet | Realboss</title>
     <div th:replace="fragments/head"></div>
 </head>
 <body>
