--- a/src/main/resources/templates/realman_users.html
+++ b/src/main/resources/templates/realman_users.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All users</title>
+    <title>Všichni zákazníci | Realboss</title>
     <div th:replace="fragments/head"></div>
 </head>
 <body>
@@ -78,12 +78,6 @@
                             Email
                         </label>
                         <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email">
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label" for="password">
-                            Heslo
-                        </label>
-                        <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="5">
                     </div>
 
                     <input type="submit" class="btn btn-primary mt-2" value="Přidat uživatele">
