--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -59,6 +59,12 @@
                             </div>
                         </div>
 
+                        <div th:if="${param.errorPasswd}">
+                            <div class="alert alert-danger">
+                                Heslo musí mít minimálně 8 znaků a jedno velké písmeno!
+                            </div>
+                        </div>
+
                         <h2>Uživatelské údaje</h2>
                         <form th:action="@{/user}" method="post" th:object="${user}">
                             <div class="form-group">
